[gd_scene load_steps=6 format=2]

[ext_resource path="res://cerita/cerita.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/cerita/scene2/scene_2.png" type="Texture" id=2]
[ext_resource path="res://cerita/scene2/Scene2.gd" type="Script" id=3]
[ext_resource path="res://asset/cerita/scene2/Narasi_Scene2.wav" type="AudioStream" id=4]
[ext_resource path="res://cerita/font.tres" type="DynamicFont" id=5]

[node name="Scene2" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Control" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" parent="Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="Panel" parent="Control" index="1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1160.0
margin_right = -136.0
margin_bottom = 168.0

[node name="Label" type="Label" parent="Control/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 8.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Putri selaras Pinang Masak dan Datuk Paduko Berhalo Dikaruniai 4 orang anak.
anak pertama bernama orang Kayo Pingai, anak kedua bernama orang Kayo Kedataran, 
anak ketiga bernama Orang Kayo Hitam, dan si bungsu bernama Orang Kayo Gemuk"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="narasi" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 4 )
volume_db = -2.0
[connection signal="pressed" from="Control/Panel2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Panel2/mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="Control/controlCerita/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/controlCerita/next" to="." method="_on_next_pressed"]
[connection signal="finished" from="narasi" to="." method="_on_narasi_finished"]
